--- a/_data/lang/en.yml
+++ b/_data/lang/en.yml
@@ -27,7 +27,7 @@ not_found:
 no_translation_tooltip: No Translation
 
 navigation:
-  brand_sub_text: Jekyll theme
+  brand_sub_text: We will know, we must know.
   contact_header: Contact
 
 color_scheme_switch_tooltip: Color scheme
@@ -92,10 +92,10 @@ post:
     link_copied: Link copied!
     tooltip:
       # keys need to match with _data/share.yml
-      twitter: Twitter
-      facebook: Facebook
-      telegram: Telegram
-      linkedin: LinkedIn
+      #twitter: Twitter
+      #facebook: Facebook
+      #telegram: Telegram
+      #linkedin: LinkedIn
       email: Email
       copy_link: Copy link
 
@@ -125,14 +125,14 @@ post-list:
 
 # for home layout
 home:
-  title: Welcome
+  title: Home
   button_name: Home
   new_posts_title: New Articles
   new_posts_show_more_button: View More ...
   # you can use $site_brand in line1 and line2 to convert your site.data.owner.brand text
   top_header_line1: "Welcome To"
   # if commented, top header will be a single line
-  top_header_line2: "$site_brand Theme"
+  top_header_line2: "$site_brand"
 
 # for archives layout
 archives:
@@ -144,7 +144,7 @@ archives:
 about:
   title: About
   button_name: About
-  sub_title: "Awesome jekyll theme"
+  sub_title: "We will know, we must know"
   email_title: email
 
 # for links layout
