keep chinese and delete english

--- a/404.md
+++ b/404.md
@@ -14,20 +14,6 @@ search_engine_exclude: true
 # page specific settings
 # add folders to redirected to 404, which does not have index.html
 redirect_from:
-  - /tabs/
-  - /query/
-  - /posts/
-  # commons
-  - /assets/
-  - /assets/css/
-  - /assets/fonts/
-  - /assets/js/
-  - /assets/img/
-  - /assets/img/default/
-  - /assets/img/default/cc/
-  - /assets/img/home/
-  - /assets/img/posts/
-  - /assets/img/about/
-  - /assets/img/projects/
-  - /assets/img/favicons/
+  - /ja/tabs/
+  - /ja/query/
 ---
