--- a/_posts/2022-12-14-kiwix.md
+++ b/_posts/2022-12-14-kiwix.md
@@ -59,6 +59,8 @@ Motrix能做到8m/s（还是在通过samba往局域网机器里下载）
 
 之后可以导入下载好的zim文件，就可以查看了
 
+在应用里面也可以按 `ctrl+i` 打开服务器(Local kiwix server)
+
 值得一提，他还有浏览器的扩展，支持chrome，edge，firefox，可以直接浏览器查看不需要其他软件
 
 ## 服务端版本
